--- a/_posts/java/msa/2023-05-13-msa_study02.md
+++ b/_posts/java/msa/2023-05-13-msa_study02.md
@@ -978,7 +978,644 @@ spring:
 정상적으로 동작하는것을 확인 할 수 있다
 
 
+#### 9장. Spring Cloud Gateway - Logging Filter
 
+글로벌 필터 적용 방법
+
+![img2](../../../images/posts/java/msa/chapter02/32.png)
+
+
+loggin 필터는 second-service에만 적용시켜 보겠다
+
+![img2](../../../images/posts/java/msa/chapter02/33.png)
+
+이렇게 적용하고 나면 아래와 같이 정상적으로 출력되는 것을 확인 가능
+
+![img2](../../../images/posts/java/msa/chapter02/34.png)
+
+[순서]
+
+1. Global Filter
+
+2. Custom Filter
+
+3. Logging Filter
+
+이제 구현을 해보자
+
+api-gateway 프로젝트에서 GlobalFilter를 복사해서 동일 패키지(filter) 아래에 붙여주고 LogginFilter 클래스라고 지어주자
+
+```java
+package com.example.apigatewayservice.filter;
+
+import lombok.Data;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.cloud.gateway.filter.GatewayFilter;
+import org.springframework.cloud.gateway.filter.OrderedGatewayFilter;
+import org.springframework.cloud.gateway.filter.factory.AbstractGatewayFilterFactory;
+import org.springframework.core.Ordered;
+import org.springframework.http.server.reactive.ServerHttpRequest;
+import org.springframework.http.server.reactive.ServerHttpResponse;
+import org.springframework.stereotype.Component;
+import reactor.core.publisher.Mono;
+
+@Component
+@Slf4j
+public class LoggingFilter extends AbstractGatewayFilterFactory<LoggingFilter.Config> {
+
+    public LoggingFilter(){
+        super(Config.class);
+    }
+
+    @Override
+    public GatewayFilter apply(Config config) {
+
+            GatewayFilter filter = new OrderedGatewayFilter((exchange, chain) -> {
+                ServerHttpRequest request = exchange.getRequest();
+                ServerHttpResponse response = exchange.getResponse();
+
+                //log.info("Custom PRE Filter : request id -> {}", request.getId());
+                log.info("Logging Filter baseMessage -> {}", config.getBaseMessage());
+
+                if(config.isPreLogger()){
+                    log.info("Logging PRE Filter : request id -> {}", request.getId());
+                }
+
+                // Custom Post Filter
+                return chain.filter(exchange).then(Mono.fromRunnable(() -> {
+                    if(config.isPostLogger()){
+                        log.info("Logging Post Filter : response code -> {}", response.getStatusCode());
+                    }
+                }));
+            }, Ordered.HIGHEST_PRECEDENCE);
+
+            return filter;
+        };
+        /*
+            그러면 gateway 필터라는 빈을 하나 등록하고 이 부분은 프리필터, 포스트필터 방식으로 나눠서 작용
+
+            람다식에 exchange, chain 객체를 받고
+
+            exchange 객체로부터 ServerHttpRequest, response 객체를 받을수 있다
+
+            포스트 필터에 반환하는곳 Mono라는 것은 웹플럭스에서 사용하는 것으로 비동기 방식으로 단일 값 전달할때 사용하는것
+         */
+
+
+    @Data
+    public static class Config{
+        private String baseMessage;
+        private boolean preLogger;
+        private boolean postLogger;
+    }
+}
+```
+
+그다음 application.yml 파일을 변경해주면 된다
+
+[기존 코드]
+```yml
+server:
+  port: 8000
+
+eureka:
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+
+spring:
+  application:
+    name: apigateway-service
+  cloud:
+    gateway:
+      default-filters:
+        - name: GlobalFilter
+          args:
+            baseMessage: Spring CLoud Gateway Global Filter
+            preLogger: true
+            postLogger: true
+      routes:
+        - id: first-service
+          uri: http://localhost:8081/
+          predicates:
+            - Path=/first-service/**
+          filters:
+#            - AddRequestHeader=first-request, first-request-header2
+#            - AddResponseHeader=first-response, first-response-header2
+            - CustomFilter
+        - id: second-service
+          uri: http://localhost:8082/
+          predicates:
+            - Path=/second-service/**
+          filters:
+#            - AddRequestHeader=second-request, second-requests-header2
+#            - AddResponseHeader=second-response, second-response-header2
+            - CustomFilter
+```
+
+[수정코드]
+```yml
+server:
+  port: 8000
+
+eureka:
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+
+spring:
+  application:
+    name: apigateway-service
+  cloud:
+    gateway:
+      default-filters:
+        - name: GlobalFilter
+          args:
+            baseMessage: Spring CLoud Gateway Global Filter
+            preLogger: true
+            postLogger: true
+      routes:
+        - id: first-service
+          uri: http://localhost:8081/
+          predicates:
+            - Path=/first-service/**
+          filters:
+#            - AddRequestHeader=first-request, first-request-header2
+#            - AddResponseHeader=first-response, first-response-header2
+            - CustomFilter
+        - id: second-service
+          uri: http://localhost:8082/
+          predicates:
+            - Path=/second-service/**
+          filters:
+#            - AddRequestHeader=second-request, second-requests-header2
+#            - AddResponseHeader=second-response, second-response-header2
+            - name: CustomFilter
+            - name: LoggingFilter
+              args:
+                baseMessage: Hi, there.
+                preLogger: true
+                postLogger: true
+```
+
+첫번째 서비스는 커스텀 필터만 가지고 있고, 세컨드 서비스는 커스텀 필터, 로깅필터 2개를 가지고 있다
+
+![img2](../../../images/posts/java/msa/chapter02/35.png)
+
+
+![img2](../../../images/posts/java/msa/chapter02/36.png)
+
+ Ordered.HIGHEST_PRECEDENCE, Ordered.LOWEST_PRECEDENCE 이 부분을 바꿔주면 필터의 순서를 조정할 수 있다
+
+#### 10장. Spring Cloud Gateway - Load Balancer
+
+Spring Cloud Gateway와 Eureka 연동 방법
+
+유레카라는 네이밍 서비스에 스프링클라우드라는 게이트웨이를 등록하고 지금까지 테스트했던 첫번째, 두번째 서비스를 모두 등록
+
+유레카 서비스 역할 : 서비스 디스커버리, 서비스 등록
+
+
+![img2](../../../images/posts/java/msa/chapter02/37.png)
+
+스텝1 : 스프링 게이트웨이, 마이크로 서비스(첫번째, 두번째서비스)쪽에 유레카 클라이언트 추가(pom.xml, application.yml)
+
+![img2](../../../images/posts/java/msa/chapter02/38.png)
+
+
+기존에는 api-gateway application.yml에 직접 uri : http://localhost:8081/ 이런식으로 등록되어 있었는데
+
+![img2](../../../images/posts/java/msa/chapter02/39.png)
+
+이제는 lb://MY-FIRST-SERVICE => (로드밸런서)://(유레카에 등록된 이름) 이렇게 작성해주어야 한다
+
+클라이언트로부터 predicates쪽(/first-service/**)로 요청이 오면 uri(lb://MY-FIRST-SERVICE) 디스커버리쪽에 MY-FIRST-SERVICE 등록된 곳으로 요청을 보내준다
+
+스템3 : Eureka Server - Service 등록 확인
+
+- Spring Cloud Gateway, First Service, Second Service
+  
+![img2](../../../images/posts/java/msa/chapter02/40.png)
+
+그럼 이제 작업을 진행해보자
+
+1. Eureka 등록 진행
+
+apigateway-service 프로젝트에 pom.xml에 아래 dependency를 추가
+
+```xml
+<dependency>
+  <groupId>org.springframework.cloud</groupId>
+  <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+</dependency>
+```
+
+마찬가지로 first-service, second-service에도 같이 추가
+
+이미 기존에 등록해두었음
+
+apigateway쪽 application.yml 파일을 수정
+
+```yml
+eureka:
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+```
+
+지금 위에 false 처리되어 있는 부분을 true로 변경
+
+```yml
+server:
+  port: 8000
+
+eureka:
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+
+spring:
+  application:
+    name: apigateway-service
+  cloud:
+    gateway:
+      default-filters:
+        - name: GlobalFilter
+          args:
+            baseMessage: Spring CLoud Gateway Global Filter
+            preLogger: true
+            postLogger: true
+      routes:
+        - id: first-service
+          uri: http://localhost:8081/
+          predicates:
+            - Path=/first-service/**
+          filters:
+#            - AddRequestHeader=first-request, first-request-header2
+#            - AddResponseHeader=first-response, first-response-header2
+            - CustomFilter
+        - id: second-service
+          uri: http://localhost:8082/
+          predicates:
+            - Path=/second-service/**
+          filters:
+#            - AddRequestHeader=second-request, second-requests-header2
+#            - AddResponseHeader=second-response, second-response-header2
+            - name: CustomFilter
+            - name: LoggingFilter
+              args:
+                baseMessage: Hi, there.
+                preLogger: true
+                postLogger: true
+```
+
+![img2](../../../images/posts/java/msa/chapter02/41.png)
+
+그 다음 first-service와 second-service application.yml에 보면 eureka 등록이 되다가 말았는데 정상적으로 등록해주자
+
+[first-service, second-service]
+
+[기존 코드]
+```yml
+server:
+  port: 8081
+
+spring:
+  application:
+    name: my-first-service
+
+eureka:
+  client:
+    fetch-registry: false
+    register-with-eureka: false
+```
+
+
+[수정 코드]
+```yml
+server:
+  port: 8081
+
+spring:
+  application:
+    name: my-first-service
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+```
+
+```yml
+server:
+  port: 8082
+
+spring:
+  application:
+    name: my-second-service
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+```
+
+![img2](../../../images/posts/java/msa/chapter02/42.png)
+
+3가지 서비스가 잘 등록되어 사용되는 것을 확인 할 수 있다
+
+그런데 지금 확인 해보니까 gateway쪽 application.yml에 설정이 하나 안되어 있는게 있어서 수정이 필요
+
+
+routes: uri 부분이 예전처럼 Localhost:8081로 되어있음
+
+```yml
+server:
+  port: 8000
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+
+spring:
+  application:
+    name: apigateway-service
+  cloud:
+    gateway:
+      default-filters:
+        - name: GlobalFilter
+          args:
+            baseMessage: Spring CLoud Gateway Global Filter
+            preLogger: true
+            postLogger: true
+      routes:
+        - id: first-service
+#          uri: http://localhost:8081/
+          uri: lb://MY-FIRST-SERVICE
+          predicates:
+            - Path=/first-service/**
+          filters:
+#            - AddRequestHeader=first-request, first-request-header2
+#            - AddResponseHeader=first-response, first-response-header2
+            - CustomFilter
+        - id: second-service
+#          uri: http://localhost:8082/
+          uri: lb://MY-SECOND-SERVICE
+          predicates:
+            - Path=/second-service/**
+          filters:
+#            - AddRequestHeader=second-request, second-requests-header2
+#            - AddResponseHeader=second-response, second-response-header2
+            - name: CustomFilter
+            - name: LoggingFilter
+              args:
+                baseMessage: Hi, there.
+                preLogger: true
+                postLogger: true
+```
+
+이렇게 하고 재기동 한다음 포스트맨으로 정상 동작이 되는지 확인해보자
+
+![img2](../../../images/posts/java/msa/chapter02/43.png)
+
+![img2](../../../images/posts/java/msa/chapter02/44.png)
+
+포스트맨으로 수행했을때도 정상적으로 잘 동작하는 것을 확인 할 수있다
+
+기존에는 apigateway에서 단독으로 서비스를 등록해서 호출되는 곳으로 보내었지만 지금은 eureka서버와 연동하여 등록된 서비스쪽으로 전송
+
+스텝4 : First Serivce, Second Service를 각각 2개씩 기동
+
+![img2](../../../images/posts/java/msa/chapter02/45.png)
+
+앞에서 이미 배웠던 내용이지만 실행 하는 부분을 그대로 복사해서 하나 더 추가해서 만들어서 실행하는 방법
+
+1. Edit Config 클릭
+
+2. 왼쪽 상단에 Copy 클릭
+
+3. Modify OptionS 클릭해서 Add JVM Option 클릭
+![img2](../../../images/posts/java/msa/chapter02/46.png)
+
+5. VM Option 부분에 -> -Dserver.port=9002 입력 후 OK 클릭
+![img2](../../../images/posts/java/msa/chapter02/47.png)
+
+* 사진에는 Deserver.port라고 되어있지만 오타
+* (Dserver라고 해야한다)
+
+포트 번호는 의미가 없이 곂치지 않게 임의로 지정하였음
+
+6. 실행하기
+![img2](../../../images/posts/java/msa/chapter02/48.png)
+
+
+
+2번째 다른 방법으로 터미널에서 작동하는 방법이 있다
+
+1. 터미널 키기
+2. 명령어 입력(mvn clean compile package)
+![img2](../../../images/posts/java/msa/chapter02/49.png)
+3. 빌드가 끝나면 끝나면 확인 명령어 입력
+4. ls -al ./target/first-service-0.0.1-SNAPSHOT.jar
+5. java -jar -Dserver.port=9092 ./target/first-service-0.0.1-SNAPSHOT.jar
+
+위 부분은 maven 설치가 필요하여 추후에 다시 진행하자
+
+이렇게 first, second 모두 포트를 다르게 해서 2개씩 띄어두고 유레카 서버를 확인해보자
+
+![img2](../../../images/posts/java/msa/chapter02/50.png)
+
+정상적으로 등록된 것을 확인 할 수 있음
+
+![img2](../../../images/posts/java/msa/chapter02/51.png)
+
+포스트맨으로 테스트를 해도 정상적으로 동작하지만 현재 first-serivce는 2개가 띄어져 있는데 어디로 들어오는건지 확인이 어렵다
+
+
+이번에는 한번 RANDOM-PORT를 사용해보자
+
+[first-service를 모두 중지후 작업]
+
+first-service에 port를 0으로 변경해보자
+
+application.yml 파일을 수정하자
+
+[기존코드]
+```yml
+server:
+  port: 8081
+
+spring:
+  application:
+    name: my-first-service
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+```
+
+[수정코드]
+```yml
+server:
+  port: 0
+
+spring:
+  application:
+    name: my-first-service
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+```
+
+이전에도 작업을 해준거지만 이렇게 해주면 vm옵션에 포트를 별도로 주지 않아도 정상적으로 랜덤포트를 만들어서 실행
+
+그냥 단순하게 포트 0 만 하게 되면 유레카 서버에 표시가 포트 0 으로만 나오기 때문이다
+
+![img2](../../../images/posts/java/msa/chapter02/52.png)
+
+VMOption 부분 설정해준 내역 삭제(-Dserver.port)
+
+![img2](../../../images/posts/java/msa/chapter02/53.png)
+
+MY-FIRST-SERVICE 포트가 이상하게 나오지만 클릭해보면 랜덤포트가 정상적으로 들어가 있음
+
+![img2](../../../images/posts/java/msa/chapter02/54.png)
+
+이제 First-Serivce Controller 부분에서 몇번 포트 서비스가 호출되었는지 알고 싶다
+
+[기존코드]
+```java
+package com.example.firstservice;
+
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestHeader;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+// http://localhost:8081/welcome 우리가 만든 프로젝트가 받기로 한 URI
+// 하지만 API-GATEWAY를 통해서 전달받을 때에는 http://locahost:8081/first-service/welcome 이렇게 받기 때문에 에러가 발생
+@RestController
+@RequestMapping("/first-service")
+@Slf4j //롬복의 로그를 사용하기 위한 어노테이션
+public class FirstServiceController {
+    @GetMapping("/welcome")
+    public String welcome(){
+       return "Welcome to the First Service";
+    }
+
+    @GetMapping("/message")
+    public String message(@RequestHeader("first-request") String header){
+        log.info(header);
+        return "Hello World in First Service";
+    }
+
+
+    @GetMapping("/check")
+    public String check(){
+        return "Hi, there. This is a message from Second Service";
+    }
+
+}
+```
+
+//application.yml 에 등록된 정보를 가져오는 방법
+
+Environment env; 
+
+추가로 스프링부트에서는 변수에 @Autowied를 하는게 아니라 생성자를 통해서 주입하는것을 권장
+
+[포트 정보 가져오는 방법 2가지]
+ 
+ 1. Environment env 사용
+ 2. HttpServletRequest 사용
+
+여기서는 위에 두가지 방식 모두 사용법을 알려줌
+
+[수정코드]
+```java
+package com.example.firstservice;
+
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.core.env.Environment;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestHeader;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+import javax.servlet.http.HttpServletRequest;
+
+// http://localhost:8081/welcome 우리가 만든 프로젝트가 받기로 한 URI
+// 하지만 API-GATEWAY를 통해서 전달받을 때에는 http://locahost:8081/first-service/welcome 이렇게 받기 때문에 에러가 발생
+@RestController
+@RequestMapping("/first-service")
+@Slf4j //롬복의 로그를 사용하기 위한 어노테이션
+public class FirstServiceController {
+
+    Environment env; //application.yml 에 등록된 정보를 가져오는 방법
+
+    @Autowired
+    public FirstServiceController(Environment env){
+        this.env = env;
+    }
+
+    @GetMapping("/welcome")
+    public String welcome(){
+       return "Welcome to the First Service";
+    }
+
+    @GetMapping("/message")
+    public String message(@RequestHeader("first-request") String header){
+        log.info(header);
+        return "Hello World in First Service";
+    }
+
+
+    @GetMapping("/check")
+    public String check(HttpServletRequest request){ //전통적인 방식으로 사용
+        log.info("Server port={}", request.getServerPort());
+
+        return String.format("hi there, this is a message from First Service on Port %s",
+                env.getProperty("local.server.port"));
+    }
+
+}
+```
+
+![img2](../../../images/posts/java/msa/chapter02/55.png)
+
+이렇게 하면 정상적으로 뜨는 것을 확인 할 수 있고 포스트맨으로 테스트 하면 1번은 first-service, 1번은 first-service2로 로드밸런싱 되면서 정상적으로 로그에 찍히는 모습을 확인 할 수 있다
+
+![img2](../../../images/posts/java/msa/chapter02/56.png)
+
+게이트웨이에는 기본적으로 라우팅 + 로드밸런서 역할 탑재
+
+여기까지 기본적으로 MSA(API Gateway, Eureka, Microservice) 기초에 대해서 알아보았다
 
 
 
